--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
             </form>   
         </div>
 
-        <button type="button" class="btn btn-primary btn-lg mx-auto" id="submit">Show me the answers!</button>
+        <button type="button" class="btn btn-primary btn-lg mx-auto" id="submit">Submit</button>
     </div>
      
         
-    <div id="results">
+    <div class="mx-auto text-white" id="results">
         <h4>Correct:<span id="correct"></span></h4>
         <h4>Incorrect:<span id="incorrect"></span></h4>
     </div>
