Clear all values and restart timer on Try Again.

--- a/index.html
+++ b/index.html
@@ -121,9 +121,10 @@
             </form>   
         </div>
 
-        <button type="button" class="btn btn-primary btn-lg mx-auto" id="submit">Submit</button>
-    </div>
-     
+    <div>    
+    <button type="button" class="btn btn-primary btn-lg mx-auto" id="submit">Submit</button>
+    <button type="button" class="btn btn-primary btn-lg mx-auto" id="try-again">Try again?</button>
+    </div> 
         
     <div class="mx-auto text-white" id="results">
         <h4>Correct:<span id="correct"></span></h4>
